test/corpus/complex.txt
; [NOTE] These are copy/pasted to validate there are no errors, then manually validated in an IDE.

=========================
COMPLEX: monster
=========================

// https://github.com/google/flatbuffers/blob/599847236c35fa3802ea4e46e20e93a55d3a4a94/tests/monster_test.fbs

// test schema file

include "include_test1.fbs";

namespace MyGame;

table InParentNamespace {}

namespace MyGame.Example2;

table Monster {}  // Test having same name as below, but in different namespace.

namespace MyGame.Example;

attribute "priority";

/// Composite components of Monster color.
enum Color:ubyte (bit_flags) {
  Red = 0, // color Red = (1u << 0)
  /// \brief color Green
  /// Green is bit_flag with value (1u << 1)
  Green,
  /// \brief color Blue (1u << 3)
  Blue = 3,
}

enum Race:byte {
  None = -1,
  Human = 0,
  Dwarf,
  Elf,
}

enum LongEnum:ulong (bit_flags) {
  LongOne = 1,
  LongTwo = 2,
  // Because this is a bitflag, 40 will be out of range of a 32-bit integer,
  // allowing us to exercise any logic special to big numbers.
  LongBig = 40,
}

union Any { Monster, TestSimpleTableWithEnum, MyGame.Example2.Monster }

union AnyUniqueAliases { M: Monster, TS: TestSimpleTableWithEnum, M2: MyGame.Example2.Monster }
union AnyAmbiguousAliases { M1: Monster, M2: Monster, M3: Monster }

struct Test { a:short; b:byte; }

table TestSimpleTableWithEnum (csharp_partial, private) {
  color: Color = Green;
}

struct Vec3 (force_align: 8) {
  x:float;
  y:float;
  z:float;
  test1:double;
  test2:Color;
  test3:Test;
}

struct Ability {
  id:uint(key);
  distance:uint;
}

struct StructOfStructs {
  a: Ability;
  b: Test;
  c: Ability;
}

struct StructOfStructsOfStructs {
 a: StructOfStructs;
}

table Stat {
  id:string;
  val:long;
  count:ushort (key);
}

table Referrable {
  id:ulong(key, hash:"fnv1a_64");
}

/// an example documentation comment: "monster object"
table Monster {
  pos:Vec3 (id: 0);
  hp:short = 100 (id: 2);
  mana:short = 150 (id: 1);
  name:string (id: 3, key);
  color:Color = Blue (id: 6);
  inventory:[ubyte] (id: 5);
  friendly:bool = false (deprecated, priority: 1, id: 4);
  /// an example documentation comment: this will end up in the generated code
  /// multiline too
  testarrayoftables:[Monster] (id: 11);
  testarrayofstring:[string] (id: 10);
  testarrayofstring2:[string] (id: 28);
  testarrayofbools:[bool] (id: 24);
  testarrayofsortedstruct:[Ability] (id: 29);
  enemy:MyGame.Example.Monster (id:12);  // Test referring by full namespace.
  test:Any (id: 8);
  test4:[Test] (id: 9);
  test5:[Test] (id: 31);
  testnestedflatbuffer:[ubyte] (id:13, nested_flatbuffer: "Monster");
  testempty:Stat (id:14);
  testbool:bool (id:15);
  testhashs32_fnv1:int (id:16, hash:"fnv1_32");
  testhashu32_fnv1:uint (id:17, hash:"fnv1_32");
  testhashs64_fnv1:long (id:18, hash:"fnv1_64");
  testhashu64_fnv1:ulong (id:19, hash:"fnv1_64");
  testhashs32_fnv1a:int (id:20, hash:"fnv1a_32");
  testhashu32_fnv1a:uint (id:21, hash:"fnv1a_32", cpp_type:"Stat");
  testhashs64_fnv1a:long (id:22, hash:"fnv1a_64");
  testhashu64_fnv1a:ulong (id:23, hash:"fnv1a_64");
  testf:float = 3.14159 (id:25);
  testf2:float = 3 (id:26);
  testf3:float (id:27);
  flex:[ubyte] (id:30, flexbuffer);
  vector_of_longs:[long] (id:32);
  vector_of_doubles:[double] (id:33);
  parent_namespace_test:InParentNamespace (id:34);
  vector_of_referrables:[Referrable](id:35);
  single_weak_reference:ulong(id:36, hash:"fnv1a_64", cpp_type:"ReferrableT");
  vector_of_weak_references:[ulong](id:37, hash:"fnv1a_64", cpp_type:"ReferrableT");
  vector_of_strong_referrables:[Referrable](id:38, cpp_ptr_type:"default_ptr_type");                 //was shared_ptr
  co_owning_reference:ulong(id:39, hash:"fnv1a_64", cpp_type:"ReferrableT", cpp_ptr_type:"naked");  //was shared_ptr as well
  vector_of_co_owning_references:[ulong](id:40, hash:"fnv1a_64", cpp_type:"ReferrableT", cpp_ptr_type:"default_ptr_type", cpp_ptr_type_get:".get()");  //was shared_ptr
  non_owning_reference:ulong(id:41, hash:"fnv1a_64", cpp_type:"ReferrableT", cpp_ptr_type:"naked", cpp_ptr_type_get:"");                              //was weak_ptr
  vector_of_non_owning_references:[ulong](id:42, hash:"fnv1a_64", cpp_type:"ReferrableT", cpp_ptr_type:"naked", cpp_ptr_type_get:"");                 //was weak_ptr
  any_unique:AnyUniqueAliases(id:44);
  any_ambiguous:AnyAmbiguousAliases (id:46);
  vector_of_enums:[Color] (id:47);
  signed_enum:Race = None (id:48);
  testrequirednestedflatbuffer:[ubyte] (id:49, nested_flatbuffer: "Monster");
  scalar_key_sorted_tables:[Stat] (id: 50);
  native_inline:Test (id: 51, native_inline);
  // The default value of this enum will be a numeric zero, which isn't a valid
  // enum value.
  long_enum_non_enum_default:LongEnum (id: 52);
  long_enum_normal_default:LongEnum = LongOne (id: 53);
  // Test that default values nan and +/-inf work.
  nan_default:float = nan (id: 54);
  inf_default:float = inf (id: 55);
  positive_inf_default:float = +inf (id: 56);
  infinity_default:float = infinity (id: 57);
  positive_infinity_default:float = +infinity (id: 58);
  negative_inf_default:float = -inf (id: 59);
  negative_infinity_default:float = -infinity (id: 60);
  double_inf_default:double = inf (id: 61);
}

table TypeAliases {
    i8:int8;
    u8:uint8;
    i16:int16;
    u16:uint16;
    i32:int32;
    u32:uint32;
    i64:int64;
    u64:uint64;
    f32:float32;
    f64:float64;
    v8:[int8];
    vf64:[float64];
}

rpc_service MonsterStorage {
  Store(Monster):Stat (streaming: "none");
  Retrieve(Stat):Monster (streaming: "server", idempotent);
  GetMaxHitPoint(Monster):Stat (streaming: "client");
  GetMinMaxHitPoints(Monster):Stat (streaming: "bidi");
}

root_type Monster;

file_identifier "MONS";
file_extension "mon";

---

   (schema
      (comment)
      (comment)
      (include
        (string_constant))
      (namespace
        (ident))
      (table
        (ident))
      (namespace
        (ident)
        (ident))
      (table
        (ident))
      (comment)
      (namespace
        (ident)
        (ident))
      (custom_attribute
        (string_constant))
      (comment)
      (enum
        (ident)
        (scalar_type)
        (metadata
          (attribute
            (ident)))
        (enum_field
          (ident)
          (integer_constant))
        (comment)
        (comment)
        (comment)
        (enum_field
          (ident))
        (comment)
        (enum_field
          (ident)
          (integer_constant)))
      (enum
        (ident)
        (scalar_type)
        (enum_field
          (ident)
          (integer_constant))
        (enum_field
          (ident)
          (integer_constant))
        (enum_field
          (ident))
        (enum_field
          (ident)))
      (enum
        (ident)
        (scalar_type)
        (metadata
          (attribute
            (ident)))
        (enum_field
          (ident)
          (integer_constant))
        (enum_field
          (ident)
          (integer_constant))
        (comment)
        (comment)
        (enum_field
          (ident)
          (integer_constant)))
      (union
        (ident)
        (union_field
          (ident))
        (union_field
          (ident))
        (union_field
          (qualified_ident
            (qualified_ident
              (ident)
              (ident))
            (ident))))
      (union
        (ident)
        (union_field
          (ident)
          (ident))
        (union_field
          (ident)
          (ident))
        (union_field
          (ident)
          (qualified_ident
            (qualified_ident
              (ident)
              (ident))
            (ident))))
      (union
        (ident)
        (union_field
          (ident)
          (ident))
        (union_field
          (ident)
          (ident))
        (union_field
          (ident)
          (ident)))
      (struct
        (ident)
        (struct_field
          (ident)
          (scalar_type))
        (struct_field
          (ident)
          (scalar_type)))
      (table
        (ident)
        (metadata
          (attribute
            (ident))
          (attribute
            (ident)))
        (table_field
          (ident)
          (ident)
          (ident)))
      (struct
        (ident)
        (metadata
          (attribute
            (ident)
            (integer_constant)))
        (struct_field
          (ident)
          (scalar_type))
        (struct_field
          (ident)
          (scalar_type))
        (struct_field
          (ident)
          (scalar_type))
        (struct_field
          (ident)
          (scalar_type))
        (struct_field
          (ident)
          (ident))
        (struct_field
          (ident)
          (ident)))
      (struct
        (ident)
        (struct_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident))))
        (struct_field
          (ident)
          (scalar_type)))
      (struct
        (ident)
        (struct_field
          (ident)
          (ident))
        (struct_field
          (ident)
          (ident))
        (struct_field
          (ident)
          (ident)))
      (struct
        (ident)
        (struct_field
          (ident)
          (ident)))
      (table
        (ident)
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)))))
      (table
        (ident)
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident))
            (attribute
              (ident)
              (string_constant)))))
      (comment)
      (table
        (ident)
        (table_field
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (integer_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (integer_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident))))
        (table_field
          (ident)
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (boolean_constant)
          (metadata
            (attribute
              (ident))
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (integer_constant))))
        (comment)
        (comment)
        (table_field
          (ident)
          (vector_type
            (ident))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (ident))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (qualified_ident
            (qualified_ident
              (ident)
              (ident))
            (ident))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (comment)
        (table_field
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (ident))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (ident))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (scalar_type)
          (float_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (integer_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident))))
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (ident))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (vector_type
            (ident))
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))))
        (comment)
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))))
        (comment)
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))))
        (comment)
        (table_field
          (ident)
          (scalar_type)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))))
        (comment)
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident)
              (string_constant))))
        (comment)
        (table_field
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (ident))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (vector_type
            (scalar_type))
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident)
              (string_constant))))
        (table_field
          (ident)
          (vector_type
            (ident))
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (integer_constant))
            (attribute
              (ident))))
        (comment)
        (comment)
        (table_field
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (comment)
        (table_field
          (ident)
          (scalar_type)
          (float_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (float_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (float_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (float_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (float_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (float_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (float_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant))))
        (table_field
          (ident)
          (scalar_type)
          (float_constant)
          (metadata
            (attribute
              (ident)
              (integer_constant)))))
      (table
        (ident)
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (scalar_type))
        (table_field
          (ident)
          (vector_type
            (scalar_type)))
        (table_field
          (ident)
          (vector_type
            (scalar_type))))
      (rpc_service
        (ident)
        (rpc_method
          (ident)
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (string_constant))))
        (rpc_method
          (ident)
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (string_constant))
            (attribute
              (ident))))
        (rpc_method
          (ident)
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (string_constant))))
        (rpc_method
          (ident)
          (ident)
          (ident)
          (metadata
            (attribute
              (ident)
              (string_constant)))))
      (root_type
        (ident))
      (file_identifier
        (string_constant))
      (file_extension
        (string_constant)))

=========================
COMPLEX: reflection.fbs
=========================

// https://github.com/google/flatbuffers/blob/599847236c35fa3802ea4e46e20e93a55d3a4a94/reflection/reflection.fbs

// This schema defines objects that represent a parsed schema, like
// the binary version of a .fbs file.
// This could be used to operate on unknown FlatBuffers at runtime.
// It can even ... represent itself (!)

namespace reflection;

// These must correspond to the enum in idl.h.
enum BaseType : byte {
    None,
    UType,
    Bool,
    Byte,
    UByte,
    Short,
    UShort,
    Int,
    UInt,
    Long,
    ULong,
    Float,
    Double,
    String,
    Vector,
    Obj,     // Used for tables & structs.
    Union,
    Array,
    Vector64,

    // Add any new type above this value.
    MaxBaseType
}

table Type {
    base_type:BaseType;
    element:BaseType = None;  // Only if base_type == Vector
                              // or base_type == Array.
    index:int = -1;  // If base_type == Object, index into "objects" below.
                     // If base_type == Union, UnionType, or integral derived
                     // from an enum, index into "enums" below.
                     // If base_type == Vector && element == Union or UnionType.
    fixed_length:uint16 = 0;  // Only if base_type == Array.
    /// The size (octets) of the `base_type` field.
    base_size:uint = 4; // 4 Is a common size due to offsets being that size.
    /// The size (octets) of the `element` field, if present.
    element_size:uint = 0;
}

table KeyValue {
    key:string (required, key);
    value:string;
}

table EnumVal {
    name:string (required);
    value:long (key);
    object:Object (deprecated);
    union_type:Type;
    documentation:[string];
    attributes:[KeyValue];
}

table Enum {
    name:string (required, key);
    values:[EnumVal] (required);  // In order of their values.
    is_union:bool = false;
    underlying_type:Type (required);
    attributes:[KeyValue];
    documentation:[string];
    /// File that this Enum is declared in.
    declaration_file: string;
}

table Field {
    name:string (required, key);
    type:Type (required);
    id:ushort;
    offset:ushort;  // Offset into the vtable for tables, or into the struct.
    default_integer:long = 0;
    default_real:double = 0.0;
    deprecated:bool = false;
    required:bool = false;
    key:bool = false;
    attributes:[KeyValue];
    documentation:[string];
    optional:bool = false;
    /// Number of padding octets to always add after this field. Structs only.
    padding:uint16 = 0;
    /// If the field uses 64-bit offsets.
    offset64:bool = false;
}

table Object {  // Used for both tables and structs.
    name:string (required, key);
    fields:[Field] (required);  // Sorted.
    is_struct:bool = false;
    minalign:int;
    bytesize:int;  // For structs.
    attributes:[KeyValue];
    documentation:[string];
    /// File that this Object is declared in.
    declaration_file: string;
}

table RPCCall {
    name:string (required, key);
    request:Object (required);      // must be a table (not a struct)
    response:Object (required);     // must be a table (not a struct)
    attributes:[KeyValue];
    documentation:[string];
}

table Service {
    name:string (required, key);
    calls:[RPCCall];
    attributes:[KeyValue];
    documentation:[string];
    /// File that this Service is declared in.
    declaration_file: string;
}

/// New schema language features that are not supported by old code generators.
enum AdvancedFeatures : ulong (bit_flags) {
    AdvancedArrayFeatures,
    AdvancedUnionFeatures,
    OptionalScalars,
    DefaultVectorsAndStrings,
}

/// File specific information.
/// Symbols declared within a file may be recovered by iterating over all
/// symbols and examining the `declaration_file` field.
table SchemaFile {
  /// Filename, relative to project root.
  filename:string (required, key);
  /// Names of included files, relative to project root.
  included_filenames:[string];
}

table Schema {
    objects:[Object] (required);    // Sorted.
    enums:[Enum] (required);        // Sorted.
    file_ident:string;
    file_ext:string;
    root_table:Object;
    services:[Service];             // Sorted.
    advanced_features:AdvancedFeatures;
    /// All the files used in this compilation. Files are relative to where
    /// flatc was invoked.
    fbs_files:[SchemaFile];         // Sorted.
}

root_type Schema;

file_identifier "BFBS";
file_extension "bfbs";

---
